fix ecm_install_icons usage and icon names
it requires an explicit list of icons nowadays. and the original icon names
said *-action-* where *-actions-* should have been used.

this resolves 3000 warnings pertaining to the incorrect usage and names

--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -1,2 +1,64 @@
 include(ECMInstallIcons)
-ecm_install_icons(${ICON_INSTALL_DIR})
+ecm_install_icons(ICONS
+                  hi16-actions-editplots.png
+                  hi16-actions-functionhelp.png
+                  hi16-actions-integral_func.png
+                  hi16-actions-maximum.png
+                  hi16-actions-minimum.png
+                  hi16-actions-newdifferential.png
+                  hi16-actions-newfunction.png
+                  hi16-actions-newimplicit.png
+                  hi16-actions-newparametric.png
+                  hi16-actions-newpolar.png
+                  hi16-actions-resetview.png
+                  hi22-actions-editplots.png
+                  hi22-actions-functionhelp.png
+                  hi22-actions-maximum.png
+                  hi22-actions-minimum.png
+                  hi22-actions-newdifferential.png
+                  hi22-actions-newfunction.png
+                  hi22-actions-newimplicit.png
+                  hi22-actions-newparametric.png
+                  hi22-actions-newpolar.png
+                  hi22-actions-resetview.png
+                  hi32-actions-coords.png
+                  hi32-actions-deriv_func.png
+                  hi32-actions-editconstants.png
+                  hi32-actions-editplots.png
+                  hi32-actions-func.png
+                  hi32-actions-functionhelp.png
+                  hi32-actions-integral_func.png
+                  hi32-actions-lessen.png
+                  hi32-actions-magnify.png
+                  hi32-actions-maximum.png
+                  hi32-actions-minimum.png
+                  hi32-actions-newdifferential.png
+                  hi32-actions-newfunction.png
+                  hi32-actions-newimplicit.png
+                  hi32-actions-newparametric.png
+                  hi32-actions-newpolar.png
+                  hi32-actions-resetview.png
+                  hi48-actions-editplots.png
+                  hi48-actions-functionhelp.png
+                  hi48-actions-maximum.png
+                  hi48-actions-minimum.png
+                  hi48-actions-newdifferential.png
+                  hi48-actions-newfunction.png
+                  hi48-actions-newimplicit.png
+                  hi48-actions-newparametric.png
+                  hi48-actions-newpolar.png
+                  hi48-actions-resetview.png
+                  hi64-actions-maximum.png
+                  hi64-actions-minimum.png
+                  hisc-actions-deriv_func.svgz
+                  hisc-actions-editconstants.svgz
+                  hisc-actions-editplots.svgz
+                  hisc-actions-functionhelp.svgz
+                  hisc-actions-integral_func.svgz
+                  hisc-actions-maximum.svgz
+                  hisc-actions-minimum.svgz
+                  hisc-actions-newfunction.svgz
+                  hisc-actions-newparametric.svgz
+                  hisc-actions-newpolar.svgz
+                  hisc-actions-resetview.svgz
+                  DESTINATION ${ICON_INSTALL_DIR})
