--- a/data/kvtml/CMakeLists.txt
+++ b/data/kvtml/CMakeLists.txt
@@ -1,5 +1,5 @@
 
 FILE(GLOB datafiles *.kvtml)
-install( FILES ${datafiles} DESTINATION  ${DATA_INSTALL_DIR}/apps/kvtml/en )
+install( FILES ${datafiles} DESTINATION  ${KDE_INSTALL_DATADIR}/apps/kvtml/en )
 add_custom_target( kvtml_data )
 
