--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -1,64 +1,64 @@
 include(ECMInstallIcons)
 ecm_install_icons(ICONS
-                  hi16-actions-editplots.png
-                  hi16-actions-functionhelp.png
-                  hi16-actions-integral_func.png
-                  hi16-actions-maximum.png
-                  hi16-actions-minimum.png
-                  hi16-actions-newdifferential.png
-                  hi16-actions-newfunction.png
-                  hi16-actions-newimplicit.png
-                  hi16-actions-newparametric.png
-                  hi16-actions-newpolar.png
-                  hi16-actions-resetview.png
-                  hi22-actions-editplots.png
-                  hi22-actions-functionhelp.png
-                  hi22-actions-maximum.png
-                  hi22-actions-minimum.png
-                  hi22-actions-newdifferential.png
-                  hi22-actions-newfunction.png
-                  hi22-actions-newimplicit.png
-                  hi22-actions-newparametric.png
-                  hi22-actions-newpolar.png
-                  hi22-actions-resetview.png
-                  hi32-actions-coords.png
-                  hi32-actions-deriv_func.png
-                  hi32-actions-editconstants.png
-                  hi32-actions-editplots.png
-                  hi32-actions-func.png
-                  hi32-actions-functionhelp.png
-                  hi32-actions-integral_func.png
-                  hi32-actions-lessen.png
-                  hi32-actions-magnify.png
-                  hi32-actions-maximum.png
-                  hi32-actions-minimum.png
-                  hi32-actions-newdifferential.png
-                  hi32-actions-newfunction.png
-                  hi32-actions-newimplicit.png
-                  hi32-actions-newparametric.png
-                  hi32-actions-newpolar.png
-                  hi32-actions-resetview.png
-                  hi48-actions-editplots.png
-                  hi48-actions-functionhelp.png
-                  hi48-actions-maximum.png
-                  hi48-actions-minimum.png
-                  hi48-actions-newdifferential.png
-                  hi48-actions-newfunction.png
-                  hi48-actions-newimplicit.png
-                  hi48-actions-newparametric.png
-                  hi48-actions-newpolar.png
-                  hi48-actions-resetview.png
-                  hi64-actions-maximum.png
-                  hi64-actions-minimum.png
-                  hisc-actions-deriv_func.svgz
-                  hisc-actions-editconstants.svgz
-                  hisc-actions-editplots.svgz
-                  hisc-actions-functionhelp.svgz
-                  hisc-actions-integral_func.svgz
-                  hisc-actions-maximum.svgz
-                  hisc-actions-minimum.svgz
-                  hisc-actions-newfunction.svgz
-                  hisc-actions-newparametric.svgz
-                  hisc-actions-newpolar.svgz
-                  hisc-actions-resetview.svgz
-                  DESTINATION ${ICON_INSTALL_DIR})
+                  16-actions-editplots.png
+                  16-actions-functionhelp.png
+                  16-actions-integral_func.png
+                  16-actions-maximum.png
+                  16-actions-minimum.png
+                  16-actions-newdifferential.png
+                  16-actions-newfunction.png
+                  16-actions-newimplicit.png
+                  16-actions-newparametric.png
+                  16-actions-newpolar.png
+                  16-actions-resetview.png
+                  22-actions-editplots.png
+                  22-actions-functionhelp.png
+                  22-actions-maximum.png
+                  22-actions-minimum.png
+                  22-actions-newdifferential.png
+                  22-actions-newfunction.png
+                  22-actions-newimplicit.png
+                  22-actions-newparametric.png
+                  22-actions-newpolar.png
+                  22-actions-resetview.png
+                  32-actions-coords.png
+                  32-actions-deriv_func.png
+                  32-actions-editconstants.png
+                  32-actions-editplots.png
+                  32-actions-func.png
+                  32-actions-functionhelp.png
+                  32-actions-integral_func.png
+                  32-actions-lessen.png
+                  32-actions-magnify.png
+                  32-actions-maximum.png
+                  32-actions-minimum.png
+                  32-actions-newdifferential.png
+                  32-actions-newfunction.png
+                  32-actions-newimplicit.png
+                  32-actions-newparametric.png
+                  32-actions-newpolar.png
+                  32-actions-resetview.png
+                  48-actions-editplots.png
+                  48-actions-functionhelp.png
+                  48-actions-maximum.png
+                  48-actions-minimum.png
+                  48-actions-newdifferential.png
+                  48-actions-newfunction.png
+                  48-actions-newimplicit.png
+                  48-actions-newparametric.png
+                  48-actions-newpolar.png
+                  48-actions-resetview.png
+                  64-actions-maximum.png
+                  64-actions-minimum.png
+                  sc-actions-deriv_func.svgz
+                  sc-actions-editconstants.svgz
+                  sc-actions-editplots.svgz
+                  sc-actions-functionhelp.svgz
+                  sc-actions-integral_func.svgz
+                  sc-actions-maximum.svgz
+                  sc-actions-minimum.svgz
+                  sc-actions-newfunction.svgz
+                  sc-actions-newparametric.svgz
+                  sc-actions-newpolar.svgz
+                  sc-actions-resetview.svgz
+                  DESTINATION ${KDE_INSTALL_ICONDIR} THEME hicolor)
