--- a/data/kvtml/CMakeLists.txt
+++ b/data/kvtml/CMakeLists.txt
@@ -31,10 +31,10 @@ add_subdirectory(ro)
 add_subdirectory(ru)
 add_subdirectory(sk)
 add_subdirectory(sl)
-# add_subdirectory(sr)
-# add_subdirectory(sr@ijekavian)
-# add_subdirectory(sr@ijekavianlatin)
-# add_subdirectory(sr@latin)
+add_subdirectory(sr)
+add_subdirectory(sr@ijekavian)
+add_subdirectory(sr@ijekavianlatin)
+add_subdirectory(sr@latin)
 add_subdirectory(sv)
 add_subdirectory(tg)
 add_subdirectory(tr)
