--- a/data/kvtml/sr/CMakeLists.txt
+++ b/data/kvtml/sr/CMakeLists.txt
@@ -1,4 +1,2 @@
-include( ../../../cmake_modules/srDataMacros.cmake )
-
-install_data_sr( FILES easy.kvtml medium.kvtml hard.kvtml animals.kvtml
-                 DESTINATION ${DATA_INSTALL_DIR}/apps/kvtml/LL )
+file( GLOB datafiles *.kvtml )
+install( FILES ${datafiles} DESTINATION  ${DATA_INSTALL_DIR}/apps/kvtml/sr )
