--- a/data/kvtml/sr@ijekavianlatin/CMakeLists.txt
+++ b/data/kvtml/sr@ijekavianlatin/CMakeLists.txt
@@ -1,2 +1,2 @@
 file( GLOB datafiles *.kvtml )
-install( FILES ${datafiles} DESTINATION  ${DATA_INSTALL_DIR}/apps/kvtml/sr@ijekavianlatin )
+install( FILES ${datafiles} DESTINATION  ${KDE_INSTALL_DATADIR}/apps/kvtml/sr@ijekavianlatin )
