--- a/data/kvtml/nn/CMakeLists.txt
+++ b/data/kvtml/nn/CMakeLists.txt
@@ -1,2 +1,2 @@
 FILE(GLOB datafiles *.kvtml)
-install( FILES ${datafiles} DESTINATION  ${DATA_INSTALL_DIR}/apps/kvtml/nn)
+install( FILES ${datafiles} DESTINATION  ${KDE_INSTALL_DATADIR}/apps/kvtml/nn)
