--- a/data/kvtml/CMakeLists.txt
+++ b/data/kvtml/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(da)
 add_subdirectory(de)
 add_subdirectory(el)
 add_subdirectory(en_GB)
+add_subdirectory(eo)
 add_subdirectory(es)
 add_subdirectory(et)
 add_subdirectory(fi)
